examples/test/testpolicy6617.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6617
  namespace: namespace127
spec:
  podSelector:
    matchLabels:
      key4: value27
      key15: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value6
      podSelector:
        matchLabels:
          key24: value39
          key11: value20
